# iron-coder

./: .gitignore  Cargo.toml  out.txt  rust-toolchain.toml
docs/: README.md  contributions.txt  personal_time_sheet_link
example-code/alarm_clock/: .ironcoder.toml  Cargo.toml  README.md
example-code/alarm_clock/.cargo/: config.toml
example-code/alarm_clock/src/: main.rs
example-code/blink/: blink.rs
example-code/blink-rp2040/: blink-rp2040.rs
example-code/blink_leds/: .ironcoder.toml  Cargo.toml
example-code/blink_leds/.cargo/: config
example-code/blink_leds/src/: main.rs
example-code/lcd_screen/: .ironcoder.toml  Cargo.toml
example-code/lcd_screen/src/: main.rs  system.rs
example-code/led_array/: .ironcoder.toml  Cargo.toml
example-code/led_array/src/: main.rs
example-code/traffic_light/: .ironcoder.toml  Cargo.toml
example-code/traffic_light/src/: main.rs
iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/: featherwing_oled_128x64.toml
iron-coder-boards/Adafruit/FeatherWing_propmaker/: prop-maker.toml
iron-coder-boards/Adafruit/Feather_RP2040/: feather_rp2040.toml
iron-coder-boards/Adafruit/Feather_nRF52832/: feather_nRF52832.toml
iron-coder-boards/Adafruit/PiTTF_32_cap_touch/: pitft32-cap-touch.toml
iron-coder-boards/Arduino/Arduino_Uno/: arduino_uno.toml
iron-coder-boards/Components/Piezo/: piezo.toml
iron-coder-boards/Components/Push_Button/: push_button.toml
iron-coder-boards/Components/Resistor_1000/: resistor_1000.toml
iron-coder-boards/Components/Yellow_LED/: yellow_led.toml
iron-coder-boards/Demo/MY_LED/: my_led.toml
iron-coder-boards/STMicroelectronics/STM32/: stm32.toml
iron-coder-boards/STMicroelectronics/STM32F4_Discovery/: stm32f4_discovery.toml
iron-coder-boards/Sparkfun/MicroMod-ESP32/: micromod_esp32.toml
iron-coder-boards/Sparkfun/MicroMod-RP2040/: micromod_rp2040.toml
iron-coder-components/LED/Yellow_LED/: yellow_led.toml
src/: lib.rs
src/app/: mod.rs
src/app/simulator/programs/Test/: memory.x
src/app/simulator/qemu/: run_qemu.bat
src/app/simulator/renode/: testBoard.resc  testBoard2.resc
src/app/simulator/renode/boards/: adafruitFeather.repl  customBoard.repl  custom_stm32f4.repl  stm32f4_discovery.repl
src/app/simulator/renode/logs/: information.txt
src/board/: display.rs  mod.rs  pinout.rs  svg_reader.rs  test.rs
src/board/add_board/: board_toml.rs  generate_board_directory.rs  pinout_toml.rs  svg_circle.rs
src/project/: display.rs  mod.rs  serial-mod.rs  serial.rs  serial_monitor.rs  simulator.rs  simulator_helpers.rs  system.rs  test.rs
src/serial_monitor/: gui.rs  io.rs  main.rs  mod.rs  serial.rs  settings_window.rs
(+9 files in other folders)
