[package]
name = "iron_coder"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27.2", features = ["serde", "persistence", "deadlock_detection"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
log = "0.4.19"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.27.2", features = ["image", "all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png", "gif"] }
toml = "0.8.14"
syntect = "5.0.0"
rfd = "0.14.1"
fs_extra = "1.3.0"
duct = "0.13.6"
enum-iterator = "2.1.0"
ra_ap_rust-analyzer = "0.0.237"
ra_ap_ide = "0.0.220"
ravedude = "0.1.8"
syn = { version = "2.0.25", features = ["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.29"
proc-macro2 = "1.0.64"
prettyplease = "0.2.10"
slotmap = "1.0.6"
clap = { version = "4.3.19", features = ["derive"] }
usvg = "0.35.0"
base64 = "0.22.1"
generate = "1.5.0"
savefile-derive = "0.17.4"
k_board = "1.2.2"
git2 = "0.19.0"
serialport = { version = "4.7", features = ["serde"] }
preferences = { version = "2.0.0" }
egui_plot = "0.27.2"
webbrowser = "1.0.4"
encoding_rs = "=0.8.35"
encoding_rs_io = "0.1.7"
strip-ansi-escapes = "0.2.1"
sysinfo = "0.29"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
